# sports-booth

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
booth/: orchestrator.py
mcp_servers/: betting_server.py  nba_server.py  rag_server.py
rag/: seed.py
static/: index.html
