[project]
name = "sports-booth"
version = "0.1.0"
description = "Live sports commentary with a multi-agent AI booth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.65",
    "nba-api>=1.11.4",
    "chromadb>=1.5.8",
    "sentence-transformers>=5.4.1",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.45.0",
    "websockets>=16.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
